# vlr

./: .bzrignore  .gitignore  Copying  License  Licensing
AresEngine/: Hacking
AresEngine/Source/Dependencies/lua-gettext/: Makefile
AresEngine/Source/Dependencies/lua-xgettext/: lua-xgettext.hs
AresEngine/Source/Third Party/lua-gettext/: gettext.lua
AresEngine/Source/Third Party/lua-xgettext/: Makefile  README  ts.lua
Extractor/: Makefile.am  Makefile.in  ReadMe  configure  configure.ac
Extractor/Macros/: ocrad.m4
Extractor/Manual/: viking-extractor.man.in
Extractor/Source/: Console.cpp  Console.h  DBusInterface.cpp  DBusInterface.h  ExplicitSingleton.h  LogicalRecord.cpp  LogicalRecord.h  Miscellaneous.cpp  Miscellaneous.h  Options.cpp  Options.h  ReconstructableImage.cpp  ReconstructableImage.h  VicarImageAssembler.cpp  VicarImageAssembler.h  VicarImageBand.cpp  VicarImageBand.h  VikingExtractor.cpp  VikingExtractor.h.in  ZZipFileDescriptor.cpp  ZZipFileDescriptor.h
Extractor/Tests/Recovery/: 22D180.png.good  22D180.txt.good  ReadMe
Extractor/Translations/: POTFILES.in  da.po  de.po  el.po  en_CA.po  en_GB.po  fil.po  fr.po  id.po  it.po  ja.po  lv.po  pl.po  ru.po  tl.po  uk.po  viking-extractor.pot  zh_CN.po  zh_TW.po
Extras/Typefaces/: Avaneya-Body.tex  Avaneya-Title.tex  Avaneya-ZeroAR.tex  Demo.tex
Extras/VLR/Extractor/: ChangeLog  Makefile.am  Makefile.in  ReadMe  aclocal.m4  configure.ac
Extras/VLR/Extractor/Macros/: ocrad.m4
Extras/VLR/Extractor/Manual/: viking-extractor-bash-completion  viking-extractor.man.in
Extras/VLR/Extractor/Source/: Console.cpp  Console.h  DBusInterface.cpp  DBusInterface.h  ExplicitSingleton.h  LogicalRecord.cpp  LogicalRecord.h  Miscellaneous.cpp  Miscellaneous.h  Options.cpp  Options.h  ReconstructableImage.cpp  ReconstructableImage.h  VicarImageAssembler.cpp  VicarImageAssembler.h  VicarImageBand.cpp  VicarImageBand.h  VikingExtractor.cpp  VikingExtractor.h.in  ZZipFileDescriptor.cpp  ZZipFileDescriptor.h  config.h.in
Extras/VLR/Extractor/Tests/Recovery/: ReadMe
Extras/VLR/Extractor/Translations/: LINGUAS  Makevars  ast.po  az.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fil.po  fr.po  gl.po  hr.po  id.po  it.po  ja.po  lv.po  ms.po  pl.po  pt_BR.po  ro.po  ru.po  tl.po  ug.po  uk.po  uz.po  viking-extractor.pot  zh_CN.po  zh_TW.po
Extras/VLR/Launcher/Data/: Launcher.glade
Extras/VLR/Launcher/Source/: ConfigurePages.py  ConfirmPage.py  FarewellPage.py  HandbookPage.py  IntroductionPage.py  LauncherApp.py  LauncherArguments.py  Main.py  Miscellaneous.py  OpeningVideoWindow.py  PageProxyBase.py  RecoveryPage.py  SelectRecoveryPage.py  SplashWindow.py  SubscribePage.py  VerificationProgressPage.py  VerificationPromptPage.py  apport_python_hook.py  autorun.sh
Extras/VLR/Mastering/: Makefile
Extras/VLR/Premastering/: Makefile  ReadMe
Extras/VLR/Premastering/Lists/: AdditionalFiles  Exclude  ExcludedFiles  (+2 more)
Extras/Viking Lander Remastered/Extractor/: Authors  Copying  Makefile.am  ReadMe  ToDo  configure.ac  viking-extractor-bash-completion
Extras/Viking Lander Remastered/Extractor/M4/: ocrad.m4
Extras/Viking Lander Remastered/Extractor/Macros/: ocrad.m4
Extras/Viking Lander Remastered/Extractor/Manual/: viking-extractor.man.in
Extras/Viking Lander Remastered/Extractor/Source/: Console.cpp  Console.h  DBusInterface.cpp  DBusInterface.h  ExplicitSingleton.h  LogicalRecord.cpp  LogicalRecord.h  Miscellaneous.cpp  Miscellaneous.h  Options.cpp  Options.h  ReconstructableImage.cpp  ReconstructableImage.h  VicarImageAssembler.cpp  VicarImageAssembler.h  VicarImageBand.cpp  VicarImageBand.h  VikingExtractor.cpp  VikingExtractor.h.in  ZZipFileDescriptor.cpp  ZZipFileDescriptor.h  ZZipFileHandle.cpp  ZZipFileHandle.h
Extras/Viking Lander Remastered/Extractor/Tests/Recovery/: ReadMe  vl_1422.001  vl_1422.002  vl_1422.003
Extras/Viking Lander Remastered/Extractor/Translations/: LINGUAS  Makevars  ast.po  az.po  de.po  el.po  en_CA.po  en_GB.po  es.po  fr.po  gl.po  it.po  ja.po  lv.po  ms.po  ru.po  uk.po  viking-extractor.pot  zh_TW.po
Extras/Viking Lander Remastered/Mastering/: LayoutOptimization  Makefile  Manifest
Launcher/Data/: Launcher.glade
Launcher/Data/Translations/: Makefile  ast.po  de.po  el.po  en_CA.po  en_GB.po  fil.po  fr.po  gl.po  it.po  lv.po  ms.po  pl.po  ro.po  ru.po  sv.po  uk.po  vlr.pot  zh_CN.po
Launcher/Source/: ConfigurePages.py  ConfirmPage.py  FarewellPage.py  HandbookPage.py  IntroductionPage.py  LauncherApp.py  LauncherArguments.py  Main.py  Miscellaneous.py  OpeningVideoWindow.py  PageProxyBase.py  RecoveryPage.py  SelectRecoveryPage.py  SplashWindow.py  SubscribePage.py  VerificationProgressPage.py  VerificationPromptPage.py
Media/: ReadMe
Premastering/: Makefile  ReadMe
Premastering/Lists/: AdditionalFiles
Premastering/Woe32/: AutoRun.inf
Premastering/Woe32/Stub/: Main.cpp  Makefile  Resources.rc
Premastering/XDG/: autoopen  autorun
Source/Viking Lander Remastered/Mastering/: Manifest
Tools/Sol2Ls/: Sol2Ls.cpp
Tools/Viking Lander Remastered/Extractor/: Makefile
Tools/Viking Lander Remastered/Mastering/: Makefile  Manifest  autorun.inf
Tools/VikingExtractor/: Console.cpp  Console.h  LogicalRecord.cpp  LogicalRecord.h  Makefile  Manifest  Miscellaneous.cpp  Miscellaneous.h  Options.cpp  Options.h  ReconstructableImage.cpp  ReconstructableImage.h  ReconstructedImage.cpp  ReconstructedImage.h  ToDo  VicarColourImage.cpp  VicarColourImage.h  VicarImageAssembler.cpp  VicarImageAssembler.h  VicarImageBand.cpp  VicarImageBand.h  VikingExtractor.cpp  VikingExtractor.h  autorun.sh
Tools/VikingExtractor/Extractor/: Makefile  ToDo
Tools/VikingExtractor/Navigator/: Main.py  Navigator.glade  VerificationThread.py
Tools/VikingExtractor/Source/: Console.cpp  Console.h  LogicalRecord.cpp  LogicalRecord.h  Miscellaneous.cpp  Miscellaneous.h  Options.cpp  Options.h  ReconstructableImage.cpp  ReconstructableImage.h  VicarImageAssembler.cpp  VicarImageAssembler.h  VicarImageBand.cpp  VicarImageBand.h  VikingExtractor.cpp  VikingExtractor.h
(+126 files in other folders)
